test/expected/explain_epudc_b-c++03.out
explain explicit operator bool()
               ^
16: error: user-defined conversion operator can not be "explicit" until C++11
